--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@angular/common": "~8.2.9",
     "@angular/compiler": "~8.2.9",
     "@angular/core": "~8.2.9",
+    "@angular/fire": "^5.2.3",
     "@angular/forms": "~8.2.9",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
     "bootstrap": "^4.3.1",
+    "firebase": "^7.5.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "ng2-search-filter": "^0.5.1",
